--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -3,20 +3,24 @@
   <groupId>assignment1.ct417</groupId>
   <artifactId>StudentRegistrationSystem</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
   <name>Student Registration System</name>
   <description>This is a valid description.</description>
+	
+	
   <dependencies>
   	<dependency>
   		<groupId>joda-time</groupId>
   		<artifactId>joda-time</artifactId>
   		<version>2.9.9</version>
 	</dependency>
-
-	<dependency>
-	    <groupId>com.github.User</groupId>
-	    <artifactId>Repo</artifactId>
-	    <version>Tag</version>
-	</dependency>
+	  <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
   
   
