--- a/shippable.yml
+++ b/shippable.yml
@@ -1,1 +1,15 @@
 
+language: java
+
+jdk:
+   - openjdk7
+   - oraclejdk8
+after_success:
+   - mvn clean cobertura:cobertura
+   - mvn test
+
+notifications:
+  email:
+      recipients:
+      
+         - k.kennedy13@nuigalway.ie
