--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,8 @@ language: java
 jdk:
    - openjdk7
    - oraclejdk8
-after_success:
+build: 
+   ci:
    - mvn clean cobertura:cobertura
    - mvn test
 
