--- a/shippable.yml
+++ b/shippable.yml
@@ -4,8 +4,8 @@ language: java
 jdk:
    - openjdk7
    - oraclejdk8
-build: 
-   ci:
+   
+after_success:
    - mvn clean cobertura:cobertura
    - mvn test
 
